[gd_scene load_steps=12 format=2]

[ext_resource path="res://Consolas.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://MainMenu/MainMenuMusic.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.905882, 0.435294, 0.317647, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.905882, 0.435294, 0.317647, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.905882, 0.435294, 0.317647, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.905882, 0.435294, 0.317647, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.905882, 0.435294, 0.317647, 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.14902, 0.27451, 0.32549, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Cat vs Developer"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 492.0
margin_right = 1820.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Play button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../Exit button")
focus_neighbour_bottom = NodePath("../How to play button")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
action_mode = 0
text = "Play Game"

[node name="How to play button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 1820.0
margin_bottom = 320.0
focus_neighbour_top = NodePath("../Play button")
focus_neighbour_bottom = NodePath("../Exit button")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
text = "How to Play"

[node name="Exit button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 1820.0
margin_bottom = 488.0
focus_neighbour_top = NodePath("../How to play button")
focus_neighbour_bottom = NodePath("../Play button")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
text = "Exit"

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Play button" to="." method="_on_Play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/How to play button" to="." method="_on_How_to_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Exit button" to="." method="_on_Exit_button_pressed"]
